[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://materials/debug.tres" type="Material" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 1.2
height = 2.99311

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.2, 0.05, 1.2 )

[node name="Player" type="KinematicBody" groups=[
"Players",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 2.8, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
shape = SubResource( 2 )

[node name="RotationHelper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )

[node name="Camera" type="Camera" parent="RotationHelper"]
current = true
far = 8192.0

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 0.05, 0, 0, 0, 1, 0, 0, 0 )
enabled = true

[node name="UI_Debug" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Label" type="Label" parent="UI_Debug"]
margin_left = 16.0
margin_top = 16.0
margin_right = 272.0
margin_bottom = 64.0
text = "ENABLED = "

[node name="Label2" type="Label" parent="UI_Debug"]
margin_left = 16.0
margin_top = 80.0
margin_right = 272.0
margin_bottom = 128.0
text = "AVAILABLE_INPUT = "

[node name="Label3" type="Label" parent="UI_Debug"]
margin_left = 16.0
margin_top = 144.0
margin_right = 272.0
margin_bottom = 192.0
text = "FPS = "

[node name="CSGBox" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.80207, 0 )
height = 5.41779
material = ExtResource( 2 )
